@@ -10,15 +10,12 @@
 
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
         <junit-paltform.version>5.6.0</junit-paltform.version>
         <maven.plugin.version>2.22.0</maven.plugin.version>
     </properties>
 
-
     <dependencies>
-
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -30,9 +27,6 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit-paltform.version}</version>
         </dependency>
-
-
-
     </dependencies>
 
     <build>
@@ -48,16 +42,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.plugin.version}</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <argLine>-->
+<!--                        &#45;&#45;illegal-access=permit-->
+<!--                    </argLine>-->
+<!--                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven.plugin.version}</version>
+<!--                <configuration>-->
+<!--                    <argLine>-->
+<!--                        &#45;&#45;illegal-access=permit-->
+<!--                    </argLine>-->
+<!--                </configuration>-->
             </plugin>
 
 
